--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,29 @@
-*{
-    background-color: aqua;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+*{                                    /*universal selector*/
+    margin:0;                 
+    padding:0;
+     box-sizing: border-box ;
+     font-family: 'Poppins', sans-serif;
+
+}
+.portfolio-container {
+    min-height: 100vh;
+    width: 100%;
+}
+.navlist{
+    display: flex;
+    gap: 3.5rem;
+    background-color: red;
+    height: 15vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.navlist li{
+    list-style: none;
+}
+.navlist li a{
+    text-decoration :none;
+    text-transform:uppercase;
 }
