--- a/portfolio.css
+++ b/portfolio.css
@@ -10,15 +10,17 @@
 .portfolio-container {
     min-height: 100vh;
     width: 100%;
+    display: flex;
 }
 .navlist{
     display: flex;
     gap: 3.5rem;
-    background-color: red;
+    
     height: 15vh;
     width: 100%;
     justify-content: center;
     align-items: center;
+    position: fixed;
 }
 .navlist li{
     list-style: none;
@@ -26,4 +28,18 @@
 .navlist li a{
     text-decoration :none;
     text-transform:uppercase;
+    font-size: 1 rem;
+    color: #fff;
+}
+.left-container, .right-container{
+    height: 100vh;
+}
+.left-container{
+    background: #262525;
+    width: 70%;
+    
+}
+.right-container{
+    background: #3877ff;
+    width: 30%;
 }
