--- a/portfolio.css
+++ b/portfolio.css
@@ -30,6 +30,7 @@
     text-transform:uppercase;
     font-size: 1 rem;
     color: #fff;
+    position: relative;
 }
 .left-container, .right-container{
     height: 100vh;
@@ -43,7 +44,7 @@
     
 }
 .right-container{
-    background:linear-gradient( -45deg,#3877ff,#262525);
+    background:linear-gradient( -45deg,#3877ff,#262525 70%);
     width: 30%;
 }
 .icons .fa-brands{
@@ -126,5 +127,19 @@
      background-image: url("image/pexels-cody-berg-463684.jpg");
      background-size: 100%;
      background-repeat: no-repeat;
+     box-shadow: 0 0 3rem #fff ;
     }
-
+    .navlist li a::after{
+        content: "";
+        position: absolute;
+        background: #fff;
+        width: 100%;
+        height: .1rem;
+        left: 0;
+        bottom: -5px;
+        transform: scale(0);
+        transition: transform .5s;
+       }
+       .navlist li a:hover::after{
+        transform: scale(1);
+       }
